--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jerry Rivera Valverde",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^2.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
     "css-minimizer-webpack-plugin": "^3.0.2",
@@ -19,6 +20,8 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.43.0",
